compiler/tests/fail/register_allocation/x86-64/unknown_type_register.jazz
export fn f (reg bool a) { }
